Edit transparent navbar to have a gradient.

--- a/source/articles/the-practice-routine.html.md.erb
+++ b/source/articles/the-practice-routine.html.md.erb
@@ -2,25 +2,17 @@
 
 ## Developing the curriculum
 
-I want to test the keyboards against each other with three main domains
+I want to test the keyboards with three main domains
 of musical prowess: fundamentals, sight reading, and playing by ear.
-Fundamentals are the ability of the pianist to play musical patterns,
+Fundamentals is the ability of the pianist to play musical patterns,
 while sight reading and playing by ear are more about how the pianist
-determines what shapes to play given the input of written or sounded
-music.
+determines what to play given the input of written or sounded music.
 
-When choosing the exercises to practice, I had a couple things that I
-valued. First is how popular or canon the exercise is. I don't want to
-be practicing content that is wildly different from what is standard. I
-also want the practice session to be somewhat diverse, and exercise
-different aspects of my abilities. Focusing on one type of exercise
-could highlight certain weaknesses of a keyboard but would create blind
-spots in my assessments.
+When choosing the exercises to practice, I take a couple things into consideration. I value exercises that are in canon or popular, as I don’t want to practice things that are wildly different from what is standard. I also want content that is somewhat diverse so I can exercise and evaluate different skills. Focusing on one type of exercise could highlight certain weaknesses of a keyboard but would create blind spots in my assessments.
 
 ### Fundamentals
 
-Taking these values into consideration, for the fundamentals I am
-choosing to practice scales and arpeggios, Hanon: The Virtuoso Pianist
+Taking these values into consideration, for the fundamentals I chose to practice scales and arpeggios, Hanon: The Virtuoso Pianist
 in Sixty Exercises, and Slonimsky's Thesaurus of Scales and Musical
 Patterns.
 
@@ -34,7 +26,7 @@ set of exercises, and Hanon will help me determine how difficult it will
 be to achieve equitable finger agility on the LIK. Unlike scales, the
 LIK will have no transpositional advantage, and will probably be
 disadvantaged, as almost all of the exercises in the book are in the key
-of C major, making it easier on the traditional keyboard.
+of C major, which should make it easier on the traditional keyboard.
 
 The last set of exercises by Slonimsky is one that I find fascinating.
 Chosen for its unique content rather than popularity, the Thesaurus
@@ -54,7 +46,7 @@ For parity, the content must be new.
 EarMaster 7 is software that addresses this problem, as it generates
 music to be sight read or played by ear from predefined parameters. This
 allows me to practice music that has a general difficulty that is
-completely unique. The software isn't perfect, but it's what I'm going
+completely unique. The software isn't perfect, (I would like to practice sight reaing with chords) but it's what I'm going
 to work with for the moment.
 
 ## Method of practicing
@@ -65,14 +57,9 @@ won't force myself to practice the same exercise for the same amount of
 time, so each keyboard will be allowed to improve at its own pace. I'm
 going to be alternating the order that I play the keyboards if I play
 both keyboards in the same day to avoid a potentially confounding
-variable.^1^
+variable.<sup>1</sup>
 
-I have broken up each exercises into a set of incrementing difficulties.
-For fundamentals this means increasing tempo, while for sight reading
-and playing by ear it is also changing ambitus and largest intervals.
-which is often just incrementing tempo from 60 bpm to 120 bpm. The
-increments are created from my metronome markings, which are increase
-the speed by about 2-4%.
+I have broken up each exercises into a set of incrementing difficulties. For fundamentals this means increasing tempo. The increments are created from my metronome markings, which are increase the speed by about 2-4%. Sight reading and playing by ear is a little bit more complex as increments can change the ambitus and largest intervals as well as the tempo.
 
 ## An imperfect, malleable practice routine
 
@@ -85,9 +72,7 @@ in the future.
 Changing the exercises midway through the experiment will complicate the
 results of the experiment. The rate of improvement is best measured with
 increments that both keyboards practiced (as it removes the confounding
-variable of increments of varying difficulty), and switching exercises
-will allbuut ensure that there are unpracticed increments on one of the
-keyboards.
+variable of measuring with increments that can have varying difficulty), and switching exercises will all but ensure that there are unpracticed increments on one of the keyboards.
 
 However, I do not think that this will completely spoil the data from
 the experiment, and it is better than the alternative of an immutable
@@ -112,9 +97,7 @@ schedule I came up with:
 
 -   10 minutes of melodic transcription
 
-And I never actually practiced that curriculum. I change the curriculum
-for my first practice session, and after a few sessions I have landed on
-this schedule:
+**Edit from 4/29/19**: And I never actually practiced that curriculum. I changed the curriculum for my first practice session, and after a few sessions I have settled with this schedule:
 
 -   15 minutes of scales and arpeggios
 
@@ -126,26 +109,19 @@ this schedule:
 
 I have been practicing considerably more than I initially planned, so I
 now play each keyboard for an hour. On top of this, I am not practicing
-the Thesaurus. Although it is some of the most interesting curriculum, I
+the Thesaurus. Although it is one of the more interesting exercise sets, I
 realized how little time fifteen minutes is (let alone five), and I
-concluded that I shut put this valuable time towards scales and Hanon
+concluded that I should put this valuable time towards scales and Hanon
 instead.
 
 ## Conclusion
 
 I chose exercises to asses fundamentals, sight reading, and playing by
-ear with reputation, popularity, and diversity in mind. I recognize that
+ear with reputation and diversity in mind. I recognize that
 the chosen content isn't perfect or complete, so I fully expect the
-curriculum to change throughout the experiment. And just a few practice
-sessions in, it already has.
+curriculum to change throughout the experiment.
 
-I am using this
-[Airtable](https://airtable.com/shrjk2lTpQWFpgd26) to keep
-track of all of my improvement. You can find all of the increments for
-all of the exercises there.
+I am using this [Airtable](https://airtable.com/shrjk2lTpQWFpgd26) to keep track of all of my improvement. You can find all of the exercises and all of the increments there. You can find the recording for any practice session [here](https://mega.nz/#F!DPpURACa!FXS_QgmHHKKOW-PCa_wI3A). You can also keep track of my practice sessions from [the practice session section of this site](https://linearisomorphickeyboard.io/practice-sessions).
 
-All of my practice sessions will be recorded. You can find the detailed
-content of what I am going to practice here. You can see my progress
-[here](https://linearisomorphickeyboard.com/progress/).
 
 1.  There is a potential confounding variable in the order that I practice the keyboards if I practice both in the same day. If I always play the LIK first and the TK second, the LIK might benefit from my mind being fresh, or the TK might benefit from me already being warmed up. I am going to keep track of each time I practice both keyboards in one day, so the next time I practice both keyboards I can alternate the order.
