--- a/source/stylesheets/blocks/_navbar.css.scss
+++ b/source/stylesheets/blocks/_navbar.css.scss
@@ -14,9 +14,14 @@
   align-items: center;
 }
 
+
 .navbar--translucent {
   &::after {
-    background: rgba(white,.6);
+    background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
+
     position: absolute;
     display: block;
     content: '';
@@ -43,6 +48,7 @@
   display: flex;
   flex-direction: row;
   padding-left: 0;
+  margin-top: 0;
   margin-bottom: 0;
   list-style: none;
   z-index: 6;
