--- a/source/articles/the-idea.html.md.erb
+++ b/source/articles/the-idea.html.md.erb
@@ -1,8 +1,10 @@
+<% partial "/partials/article-layout" do %>
 # The Idea
 
 There may be a better way to design the piano.
 
 It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major. It is wonderfully simple: just play the white notes. But the price of a simple C major comes at the cost of increased difficulty and complexity for the other keys.
+
 
 But why is the piano designed this way? At first it may appear that the keyboard was made for beginners and we never took the training wheels off, but that is not the case.
 
@@ -59,3 +61,5 @@ If you're still interested, you can read other articles about:
 3.  "Isomorphism applied to musical instruments means that every distinct musical performance is executed in the same way, regardless of key or location." [http://smcnetwork.org/system/files/smc2011\_submission\_169.pdf](http://smcnetwork.org/system/files/smc2011_submission_169.pdf)
 
 4.  The traditional keyboard has four different ways to play a perfect fifth: White key to white key (eg. C -\> G), white key to black key (eg. B -\> F\#), black key to white key (eg. Bb -\> F), and black key to black key (C\# -\> G\#). For more on this, check out [The Experiment](https://likeyboard.io/articles/the-experiment/).
+
+<% end %>
