--- a/source/stylesheets/custom/_article.css.scss
+++ b/source/stylesheets/custom/_article.css.scss
@@ -78,6 +78,31 @@
   .breakout {
     margin-left: calc(-50vw + 50%);
     margin-right: calc(-50vw + 50%);
+
+    width: 100vw;
+    position: relative;
+    margin-left: -50vw;
+    height: 100px;
+    margin-top: 100px;
+    left: 50%;
+  }
+
+
+  .row-full{
+    width: 100vw;
+    position: relative;
+    margin-left: -50vw;
+    height: 100px;
+    margin-top: 100px;
+    left: 50%;
+  }
+
+  .col > *:not( .test-block ) {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 50rem;
+    padding-left: 5%;
+    padding-right: 5%;
   }
 }
 
