--- a/source/stylesheets/custom/_the-hypotheses.css.scss
+++ b/source/stylesheets/custom/_the-hypotheses.css.scss
@@ -1,16 +1,18 @@
 .intervals-shapes-section {
   font-size: 16px;
-  min-width: 900px;
+  // min-width: 900px;
+  margin-left: calc(-50vw + 50%);
+  margin-right: calc(-50vw + 50%);
 }
-.intervals-shapes-graph {
-  width: 95vw;
-  height: 400px;
-  margin: auto;
-}
-.intervals-shapes-graph__label {
-  // This is dependent on the width of the .intervals-shapes-graph
-  margin-left: 2.5vw;
-}
+// .intervals-shapes-graph {
+//   width: 95vw;
+//   height: 400px;
+//   margin: auto;
+// }
+// .intervals-shapes-graph__label {
+//   // This is dependent on the width of the .intervals-shapes-graph
+//   margin-left: 2.5vw;
+// }
 .nodes {
   display: flex;
   justify-content: space-evenly;
