Redesigning the hypotheses page.

--- a/source/articles/the-hypotheses.html.md.erb
+++ b/source/articles/the-hypotheses.html.md.erb
@@ -19,7 +19,7 @@ You can imagine a keyboard as a function that takes two variables---the shape an
 
 **f(shape, location) =\> sound**
 
-What isomorphic keyboards do is remove the variable of location; what note you start on will never determine the shape to make to play a certain sound.
+What isomorphic keyboards do is remove the variable of location; the note you start on will never determine the shape to make to play a certain sound.
 
 **f(shape) =\> sound**
 
@@ -43,7 +43,7 @@ Below is a graph of all of the twelve intervals within an octave, and all of the
 
 
 <div class="intervals-shapes-section">
-  <div class="intervals-shapes-graph__label"><h2>TK</h2></div>
+  <h3 class="intervals-shapes-graph__label">TK</h3>
   <div class="intervals-shapes-graph intervals-shapes-graph--tk">
     <div class="nodes intervals">
       <div class="node interval" id="rec0vNdSsnZkIcA4X" name="Minor 2nd">
@@ -210,16 +210,12 @@ Below is a graph of all of the twelve intervals within an octave, and all of the
       </div>
     </div>
   </div>
-  
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col col-lg-6">
-        <img src="/images/legend.png" alt="Legend for intervals-shapes graph" class="legend"/>
-      </div>
-    </div>
+
+  <div class="legend-container">
+    <img src="/images/legend.png" alt="Legend for intervals-shapes graph" class="legend"/>
   </div>
 
-  <div class="intervals-shapes-graph__label"><h2>LIK</h2></div>
+  <h3 class="intervals-shapes-graph__label">LIK</h3>
   <div class="intervals-shapes-graph intervals-shapes-graph--lik">
     <div class="nodes intervals">
       <div class="node interval" id="lik-minor-2nd" name="Minor 2nd">
