--- a/source/partials/_article-layout.html.erb
+++ b/source/partials/_article-layout.html.erb
@@ -1,7 +1,7 @@
 <!-- No indents so that the markdown parser does not mistake real code
 for indented code. -->
 
-<section class="ARTICLE LAYOUT PARTIAL container section article-show">
+<section class="container section">
 <div class="row">
 <div class="col col-lg-8 offset-lg-1" markdown="1">
 <%= yield %>
