--- a/source/stylesheets/custom/_the-hypotheses.css.scss
+++ b/source/stylesheets/custom/_the-hypotheses.css.scss
@@ -1,22 +1,18 @@
 .intervals-shapes-section {
   font-size: 16px;
-  // min-width: 900px;
-  margin-left: calc(-50vw + 50%);
-  margin-right: calc(-50vw + 50%);
+  padding: 0 1rem;
 }
-// .intervals-shapes-graph {
-//   width: 95vw;
-//   height: 400px;
-//   margin: auto;
-// }
-// .intervals-shapes-graph__label {
-//   // This is dependent on the width of the .intervals-shapes-graph
-//   margin-left: 2.5vw;
-// }
+.intervals-shapes-graph__label {
+  text-align: center;
+  margin: 3rem 0;
+}
 .nodes {
   display: flex;
   justify-content: space-evenly;
   margin-bottom: 14rem;
+}
+.nodes.shapes {
+  margin-bottom: 4rem;
 }
 .label {
   display:block;
@@ -25,7 +21,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  // background-color: white;
 }
 .interval {
   margin: 0 0.5rem;
@@ -37,7 +32,6 @@
   border-radius: 50%;
   border: 1px solid grey;
   z-index: 2;
-  /*display: inline-block;*/
 }
 .shapes svg {
   position: relative;
@@ -46,6 +40,15 @@
 .node svg {
   height: 2rem;
   width: 2rem;
+}
+
+.legend-container {
+  display: flex;
+  justify-content: center;
+}
+.legend {
+  width: auto;
+  height: 16rem;
 }
 
 .tippy-tooltip.dark-theme {
