--- a/source/javascripts/pages/the-hypotheses.js.erb
+++ b/source/javascripts/pages/the-hypotheses.js.erb
@@ -1,3 +1,5 @@
+// Shapes + Sounds Graph
+
 // Set data from data file
 var edges = <%= data.intervals_and_shapes.to_json %>
 
@@ -95,4 +97,3 @@ window.addEventListener("resize", () => {
 
   renderLinesAndEdges();
 });
-
