--- a/source/stylesheets/blocks/_chartist-settings.css.scss
+++ b/source/stylesheets/blocks/_chartist-settings.css.scss
@@ -1,4 +1,7 @@
-$red: red;
+$tk-color: #d70206;
+$tk-color-2: #EB8183;
+$lik-color: #59922b;
+$lik-color-2: #ACC995;
 
 // Scales for responsive SVG containers
 $ct-scales: ((1), (15/16), (8/9), (5/6), (4/5), (3/4), (2/3), (5/8), (1/1.618), (3/5), (9/16), (8/15), (1/2), (2/5), (3/8), (1/3), (1/4)) !default;
@@ -72,8 +75,8 @@ $ct-include-alternative-responsive-containers: $ct-include-classes !default;
 // Series names and colors. This can be extended or customized as desired. Just add more series and colors.
 $ct-series-names: (a, b, c, d, e, f, g, h, i, j, k, l, m, n, o) !default;
 $ct-series-colors: (
-  #d70206,
-  #59922b,
+  $tk-color,
+  $lik-color,
   #f05b4f,
   #f4c63d,
   #d17905,
