--- a/source/stylesheets/custom/_article.css.scss
+++ b/source/stylesheets/custom/_article.css.scss
@@ -51,7 +51,12 @@
     font-size: 24px;
   }
 
-  ol:last-of-type {
+  // ol:last-of-type {
+  //   margin-top: 8rem;
+  //   font-size: 16px;
+  // }
+
+  .footnotes {
     margin-top: 8rem;
     font-size: 16px;
   }
